--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/Sabertoothmini.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/Sabertoothmini.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none'; script-src 'self' https://vercel.live; style-src 'self' https://fonts.googleapis.com;"
+    />
     <title>SABERTOOTH</title>
   </head>
   <body class="bg-[#0A090D]">
