--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Use absolute path for production assets -->
-    <link rel="icon" type="image/svg+xml" href="/assets/Sabertoothmini.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/Sabertoothmini.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SABERTOOTH</title>
   </head>
   <body class="bg-[#0A090D]">
     <div id="root"></div>
-    <!-- After Vite build, the JavaScript entry file is inside dist/assets -->
-    <script type="module" src="/assets/main-xxx.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
